# claude-retro

./: .gitignore  CLAUDE.md  COMPARISON.md  LICENSE  Makefile  README.md  build_macos.sh  claude_retro.spec  create_icon.py  icon.icns  launcher.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agent_insights/: version.py
claude_retro/: __main__.py  app.py  background.py  baselines.py  config.py  db.py  digest.py  events.py  export.py  features.py  ingest.py  intents.py  llm_judge.py  prescriptions.py  scoring.py  server.py  sessions.py  skills.py  telemetry.py  version.py  watcher.py
claude_retro/static/: index.html  viewer.html
tests/: conftest.py  test_api.py  test_judge.py  test_sessions.py  test_skills.py
