[project]
name = "claude-retro"
version = "1.2.0"
description = "Sprint retro for your Claude Code sessions"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "flask>=2.0.0",
    "sessionlog>=0.1.3",
    "claude-relay>=0.2.0",
]

[project.scripts]
claude-retro = "claude_retro.__main__:main"

[tool.setuptools.packages.find]
include = ["claude_retro*"]
